syntax = "proto3";

option go_package = "v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package v1;

enum BenchmarkStatus {
    INFO = 0;
    WARN = 1;
    NOTE = 2;
    PASS = 3;
}

message BenchmarkTestResult {
    BenchmarkStatus result = 1;
    repeated string notes  = 2;
}

message BenchmarkResult {
    BenchmarkTestResult test_result          = 1;
    BenchmarkDefinition benchmark_definition = 2;
}

message BenchmarkDefinition {
    string name        = 1;
    string description = 2;
}

message BenchmarkPayload {
    repeated BenchmarkResult results     = 1;
    google.protobuf.Timestamp start_time = 2;
    google.protobuf.Timestamp end_time   = 3;
    string host                          = 4;
}

message GetBenchmarkRequest {
    google.protobuf.Timestamp start_time = 1;
    google.protobuf.Timestamp end_time   = 2;
    string host                          = 3;
}

message GetBenchmarkResponse {
    repeated BenchmarkPayload benchmarks = 1;
}

service BenchmarkService {

    rpc GetBenchmark(GetBenchmarkRequest) returns (GetBenchmarkResponse) {
        option (google.api.http) = {
            get: "/v1/benchmarks"
        };
    }

    rpc PostBenchmark(BenchmarkPayload) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/benchmarks"
            body: "*"
        };
    }

}
